@@ -28,7 +28,7 @@
 
   <groupId>org.apache.arrow.adbc</groupId>
   <artifactId>arrow-adbc-java-root</artifactId>
-  <version>0.23.0-SNAPSHOT</version>
+  <version>0.24.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Apache Arrow ADBC Java Root POM</name>
@@ -96,13 +96,14 @@
   </distributionManagement>
 
   <properties>
-    <dep.arrow.version>18.3.0</dep.arrow.version>
-    <dep.org.checkerframework.version>3.54.0</dep.org.checkerframework.version>
+    <dep.arrow.version>19.0.0</dep.arrow.version>
+    <dep.org.checkerframework.version>4.1.0</dep.org.checkerframework.version>
     <!-- org.apache:apache overrides -->
     <minimalJavaBuildVersion>11</minimalJavaBuildVersion>
     <maven.compiler.release>11</maven.compiler.release>
     <maven.compiler.target>11</maven.compiler.target>
     <surefire.version>3.5.2</surefire.version>
+    <surefireArgLine></surefireArgLine>
     <version.maven-javadoc-plugin>3.11.1</version.maven-javadoc-plugin>
   </properties>
 
@@ -170,7 +171,7 @@
       <dependency>
         <groupId>org.junit</groupId>
         <artifactId>junit-bom</artifactId>
-        <version>5.14.3</version>
+        <version>5.14.4</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -183,7 +184,7 @@
         <plugin>
           <groupId>com.diffplug.spotless</groupId>
           <artifactId>spotless-maven-plugin</artifactId>
-          <version>3.3.0</version>
+          <version>3.4.0</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo.natives</groupId>
@@ -198,7 +199,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
+          <argLine>${surefireArgLine} --add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
 
@@ -278,6 +279,15 @@
 
   <profiles>
     <profile>
+      <id>java-25+</id>
+      <activation>
+        <jdk>[25,)</jdk>
+      </activation>
+      <properties>
+        <surefireArgLine>--sun-misc-unsafe-memory-access=allow</surefireArgLine>
+      </properties>
+    </profile>
+    <profile>
       <id>errorprone</id>
       <build>
         <plugins>
@@ -307,12 +317,12 @@
                 <path>
                   <groupId>com.google.errorprone</groupId>
                   <artifactId>error_prone_core</artifactId>
-                  <version>2.48.0</version>
+                  <version>2.49.0</version>
                 </path>
                 <path>
                   <groupId>com.uber.nullaway</groupId>
                   <artifactId>nullaway</artifactId>
-                  <version>0.13.1</version>
+                  <version>0.13.4</version>
                 </path>
                 <path>
                   <groupId>org.checkerframework</groupId>
@@ -333,7 +343,7 @@
       <id>jni</id>
       <modules>
         <module>driver/jni</module>
-        <module>driver/jni-validation-sqlite</module>
+        <module>driver/jni-validation</module>
       </modules>
     </profile>
   </profiles>
